Add the explicit include of qpixmapcache.h to qlabel.cpp

The include is required since code now accesses the respective types.

Amends 7a238e1225f49b81772516ed5d0a5a4f4f2e9268

Fixes: QTBUG-136079
Change-Id: I3c8fb8cd5b46875613b866bcb9c6bf7cded926a3
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit bfdedb260e019244cf199ed76915811ff69c9582)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>